Completed loading News_2021.07.31

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">FinalProject</string>
-    <string name="load-button">Load</string>
+    <string name="loadbutton">Load</string>
 </resources>
