Completed Database update_2021.08.03

--- a/app/src/main/res/values-si-rLK/strings.xml
+++ b/app/src/main/res/values-si-rLK/strings.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="app_name">FinalProject</string>
     <string name="loadbutton">ලබා ගන්න</string>
+    <string name="savebutton">ප්රියතම</string>
 
 </resources>
