--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FinalProject</string>
-    <string name="loadbutton">Load</string>
+    <string name="loadbutton">Load News</string>
+    <string name="savebutton">Favourites</string>
+
 </resources>
