--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">FinalProject</string>
-    <string name="open">open</string>
-    <string name="close">close</string>
+    <string name="close" translatable="false">close</string>
+    <string name="open" translatable="false">open</string>
 </resources>
