--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -6,4 +6,6 @@
     <string name="delete">Click to Remove</string>
     <string name="enterbusstopnumber">Enter Bus Stop Number</string>
     <string name="enterbusnumber">Enter Bus Number</string>
+    <string name="menu">Main Menu</string>
+    <string name="help">Help</string>
 </resources>
